Fix task details overflow above task header

--- a/style/min1200px.css
+++ b/style/min1200px.css
@@ -275,7 +275,7 @@ h5 {
   height: 4rem;
   position: sticky;
   top: 0;
-  /* z-index: 1; */
+  z-index: 1;
 }
 
 .card-header > h5 {
